--- a/templates/cadastro/cadastro.html
+++ b/templates/cadastro/cadastro.html
@@ -1,56 +1,61 @@
 {% extends "core/base.html" %}
 
+{% load widget_tweaks %}
+
 {% block content %}
 		{% if is_valid %}
 			<div class="alert alert-success" role="alert">
 				<p id="success">Inscrição realizada com sucesso!</p>
 			</div>
 		{% endif %}
-		<div class="formulario">
-			<form class="form-insc" action="/cadastro/" method="post">{% csrf_token %}
-				<h3>Inscreva-se!</h3>
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
-				  </div>
-				  {{ form.nome }}
-				</div>
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1"><i class="fas fa-envelope"></i></span>
-				  </div>
-				  {{ form.email }}
-				</div>
-				<div class="input-group mb-3">
-					<div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
-				  </div>
-				  {{ form.senha }}
-				</div>
-				<div class="form-group">
-			    {{ form.idade }}
-			  </div>
-			  <div class="form-group">
-			    {{ form.cidade }}
-			  </div>
-				<div class="form-group">
-			    {{ form.uf }}
-			  </div>
-				<div class="form-group input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1"><i class="fas fa-id-card"></i></span>
-				  </div>
-				  {{ form.cpf }}
-				</div>
-				<div class="form-group">
-					{{ form.rg }}
-				</div>
-				<div class="form-group">
-					{{ form.telefone }}
-				</div>
-				<button type="submit" id="btn-topo" class="btn btn-primary">Enviar</button>
-				<a href="{% url 'cadastro:login' %}">Eu já sou um membro</a>
-			</form>
-		</div>
+		
+	<section class="content-header">
+      <h1>
+        Novo
+        <small>usuário</small>
+      </h1>
+      <ol class="breadcrumb">
+        <li><a href=""><i class="fa fa-building-o"></i> Usuários</a></li>
+        <li class="active">Novo usuário</li>
+      </ol>
+    </section>
+  
+    <!-- Main content -->
+    <section class="content">
+      <div class="box box-danger">
+        <div class="box-header with-border">
+          <h3 class="box-title">Formulário</h3>
+        </div>
+        <!-- /.box-header -->
+        <!-- form start -->
+        <form class="form-horizontal" method="POST">
+          {% csrf_token %}
 
+          {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+          {% endfor %}
+
+          <div class="box-body">
+          {% for field in form.visible_fields %}
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">{{ field.label }}</label>
+              <div class="col-sm-10">
+                {{ field|add_class:'form-control' }}
+                {% for error in field.errors %}
+                  <span class="help-block">{{ error }}</span>
+                {% endfor %}
+              </div>
+            </div>
+          {% endfor %}
+          </div>
+          <!-- /.box-body -->
+          <div class="box-footer">
+            <button type="submit" class="btn btn-danger pull-right">Salvar</button>
+            <a href="" class="btn btn-default">Cancel</a>
+          </div>
+          <!-- /.box-footer -->
+        </form>
+      </div>
+    </section>
+  </section>
 {% endblock %}
