--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -29,6 +29,7 @@
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body class="hold-transition skin-green-light sidebar-mini">
 <!-- Site wrapper -->
