--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -132,6 +132,9 @@
             <a href="{% url 'cadastro:logout' %}">
               <i class="fa fa-user"></i> <span>Logout</span>
             </a>
+            <a href="{% url 'cadastro:inscricoes' %}">
+              <i class="fa fa-user"></i> <span>Minhas inscrições</span>
+            </a>
           {% else %}
             <a href="{% url 'cadastro:login' %}">
               <i class="fa fa-user"></i> <span>Login</span>
