--- a/templates/core/detalhe.html
+++ b/templates/core/detalhe.html
@@ -11,7 +11,7 @@
 	<div class="album">
 		<h3>Album de Fotos</h3>
 		<a href="{% url 'core:eventos-album' object.slug %}">
-			<img src="{% static 'evento.jpg' %}" alt="imagem padrao">
+			<img src="#" alt="imagem padrao">
 		</a>
 	</div>
 {% endblock %}
