certificado: quase terminando

--- a/templates/pdf/certificado.html
+++ b/templates/pdf/certificado.html
@@ -5,8 +5,8 @@
     <title>Certificado</title>
   </head>
   <body>
-    <h5>{{ invoice_id }}</h5>
+    <h5>{{ nome }}</h5>
     <hr>
-    <h5>{{ customer_name }}</h5>
+    <h5>{{ curso }} - {{ carga_h }}</h5>
   </body>
 </html>
