--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -37,7 +37,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="../../index2.html" class="logo">
+    <a href="{% url 'core:index' %}" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>HUB</b></span>
       <!-- logo for regular state and mobile devices -->
@@ -135,6 +135,9 @@
             <a href="{% url 'cadastro:inscricoes' %}">
               <i class="fa fa-user"></i> <span>Minhas inscrições</span>
             </a>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              Meus certificados
+            </button>
           {% else %}
             <a href="{% url 'cadastro:login' %}">
               <i class="fa fa-user"></i> <span>Login</span>
