--- a/templates/pdf/certificado.html
+++ b/templates/pdf/certificado.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Certificado</title>
+    <style type="text/css">
+
+    </style>
   </head>
   <body>
     <h5>{{ nome }}</h5>
