--- a/templates/cadastro/login.html
+++ b/templates/cadastro/login.html
@@ -4,33 +4,34 @@
 
 {% block content %}
 
-		<div class="formulario">
-			<h2>Log in</h2>
-		  <form method="post">
-		    {% csrf_token %}
+  <!-- /.login-logo -->
+	<div class="centro">
 
-		    {% for hidden in form.hidden_fields %}
-		      {{ hidden }}
-		    {% endfor %}
+  <div class="login-box-body">
+    <p class="login-box-msg">Informe seu usuário e senha</p>
 
-				{% for field in form.visible_fields %}
-		      <div class="form-group">
-		        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-		        {% render_field field class="form-control" placeholder=field.label %}
-		        {% for error in field.errors %}
-		          <span class="help-block">{{ error }}</span>
-		        {% endfor %}
-		      </div>
-				{% endfor %}
+    <form action="{% url 'cadastro:login' %}" method="post">
+      {% csrf_token %}
+      <div class="form-group has-feedback">
+        <input name="username" type="text" class="form-control" placeholder="Usuário">
+        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+      </div>
+      <div class="form-group has-feedback">
+        <input name="password" type="password" class="form-control" placeholder="Senha">
+        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+      </div>
+      <div class="row">
+        <!-- /.col -->
+        <div class="col-xs-4 pull-right">
+          <button type="submit" class="btn btn-danger btn-block btn-flat">Entrar</button>
+        </div>
+        <!-- /.col -->
+      </div>
+    </form>
 
-		    <div class="form-group">
-		      <button type="submit" class="btn btn-primary">
-		        <span class="glyphicon glyphicon-ok"></span>Entrar
-		      </button>
-		      <a href="{% url 'core:index' %}" class="btn btn-default">Cancelar</a>
-					<a href="{% url 'cadastro:cadastro' %}" class="btn btn-default">Registre-se como membro</a>
-		    </div>
-		  </form>
-		</div>
+  </div>
+  <!-- /.login-box-body -->
+</div>
+<!-- /.login-box -->
 
 {% endblock %}
