--- a/templates/admin/alterar_evento.html
+++ b/templates/admin/alterar_evento.html
@@ -11,25 +11,33 @@
   </div>
   <div class="register-box-body">
     <p class="login-box-msg">Altere aqui seu evento</p>
-    <form action="../../index.html" method="post">
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" placeholder="Altere o nome">
+    <form class="form-horizontal" method="POST">
+      {% csrf_token %}
+
+      {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+      {% endfor %}
+
+      <div class="box-body">
+      {% for field in form.visible_fields %}
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">{{ field.label }}</label>
+          <div class="col-sm-10">
+            {{ field|add_class:'form-control' }}
+            {% for error in field.errors %}
+              <span class="help-block">{{ error }}</span>
+            {% endfor %}
+          </div>
+        </div>
+      {% endfor %}
       </div>
-      <div class="form-group has-feedback">
-        <label for="data">Altere a data:</label>
-        <input type="date" name="data" class="form-control">
+      <!-- /.box-body -->
+      <div class="box-footer">
+        <button type="submit" class="btn btn-danger pull-right">Salvar</button>
+        <a href="{% url 'cadastro:dashboard' %}" class="btn btn-default">Voltar</a>
       </div>
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" placeholder="Altere a descrição">
-      </div>
-      <div class="form-group has-feedback">
-        <input type="integer" class="form-control" placeholder="Altere o tempo de duração">
-      </div>
-      <div class="form-group has-feedback">
-        <label for="prazo">Altere o Prazo de Inscrição:</label>
-        <input type="date" name="prazo" class="form-control">
-      <div class="col-xs-4">
-        <button type="submit" class="btn btn-primary btn-block btn-flat">Alterar</button>
-      </div>
-    </form>
+      <!-- /.box-footer -->
+</form>
 </div>
+
+{% endblock %}
