--- a/templates/admin/usuario.html
+++ b/templates/admin/usuario.html
@@ -4,12 +4,16 @@
 
 {% block content %}
 
+  {% for l in lista_user %}
+    {{ l.nome }}
+  {% endfor %}
+
 <div class="register-box">
   <div class="register-logo">
     <a href="#"><b>Sistema de Eventos</b></a>
   </div>
   <div class="register-box-body">
-    <p class="login-box-msg">Cadastre aqui seu evento</p>
+    <p class="login-box-msg">Autorizar a emissão dos certificados</p>
     <form class="form-horizontal" method="POST">
           {% csrf_token %}
 
