--- a/templates/cadastro/cadastro.html
+++ b/templates/cadastro/cadastro.html
@@ -8,7 +8,7 @@
 				<p id="success">Inscrição realizada com sucesso!</p>
 			</div>
 		{% endif %}
-		
+
 	<section class="content-header">
       <h1>
         Novo
@@ -19,7 +19,7 @@
         <li class="active">Novo usuário</li>
       </ol>
     </section>
-  
+
     <!-- Main content -->
     <section class="content">
       <div class="box box-danger">
@@ -51,7 +51,7 @@
           <!-- /.box-body -->
           <div class="box-footer">
             <button type="submit" class="btn btn-danger pull-right">Salvar</button>
-            <a href="" class="btn btn-default">Cancel</a>
+            <a href="" class="btn btn-default">Cancelar</a>
           </div>
           <!-- /.box-footer -->
         </form>
