--- a/templates/cadastro/dashboard.html
+++ b/templates/cadastro/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 	{% if request.user.is_superuser %}
-	
+
 	{% else %}
 	<div class="container">
 	  <form class="form-inline search-bar" action="{% url 'core:eventos-lista' %}" method="post">{% csrf_token %}
@@ -25,6 +25,10 @@
 	      </div>
 	      <div class="modal-body">
 	        {% for cert in certificado %}
+
+					{% if autoriza.emitir_cert == 0 %}
+						ok
+					{% endfor %}
 					<ul>
 						<li><a href="{% url 'pdf' %}" target="_blank">{{ cert.evento.nome }}</a></li>
 					</ul>
@@ -50,8 +54,24 @@
 						</div>
 			</div>
 		</div>
-
 	{% else %}
-
+	<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">#</th>
+				<th scope="col">Evento</th>
+				<th scope="col">Status</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for event in lista %}
+			<tr>
+				<th scope="row">1</th>
+				<td>{{ event.nome }}</td>
+				<td>{{ event.finalizado }}</td>
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 	{% endif %}
 {% endblock %}
