--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -136,6 +136,12 @@
           <a href="{% url 'cadastro:emitir' %}">
             <i class="fa fa-dashboard"></i> <span>Autorizar emissão dos certificados</span>
           </a>
+          <a href="{% url 'cadastro:emitir' %}">
+            <i class="fa fa-dashboard"></i> <span>Publicar fotos</span>
+          </a>
+          <a href="{% url 'cadastro:emitir' %}">
+            <i class="fa fa-dashboard"></i> <span>Publicar noticias</span>
+          </a>
         {% endif %}
           {% if user.is_authenticated %}
             <a href="{% url 'cadastro:logout' %}">
