--- a/templates/admin/cadastro_evento.html
+++ b/templates/admin/cadastro_evento.html
@@ -8,6 +8,7 @@
   <div class="register-logo">
     <a href="#"><b>Sistema de Eventos</b></a>
   </div>
+  {% if request.user.is_superuser %}
   <div class="register-box-body">
     <p class="login-box-msg">Cadastre aqui seu evento</p>
     <form class="form-horizontal" method="POST">
@@ -37,6 +38,11 @@
           </div>
           <!-- /.box-footer -->
     </form>
-</div>
+  </div>
+  {% else %}
+
+  <h3>{{ request.user.first_name }} você não esta autorizado a acessar essa página!</h3>
+
+  {% endif %}
 
 {% endblock %}
