--- a/templates/cadastro/dashboard.html
+++ b/templates/cadastro/dashboard.html
@@ -27,17 +27,13 @@
 
 					{% for aut in autoriza %}
 						{% if aut.emitir_cert == 0 %}
-							{% for cert in certificado %}
 							<ul>
-								<li><a href="{% url 'pdf' %}" target="_blank">{{ cert.evento.nome }}</a>-Participação confirmada</li>
+								<li><a href="{% url 'pdf' %}" target="_blank">{{ aut.evento.nome }}</a>-Participação confirmada</li>
 							</ul>
-							{% endfor %}
 						{% else %}
-							{% for cert in certificado %}
 							<ul>
-								<li><a href="#">{{ cert.evento.nome }}</a>-Participação não confirmada</li>
+								<li><a href="#">{{ aut.evento.nome }}</a>-Participação não confirmada</li>
 							</ul>
-							{% endfor %}
 						{% endif %}
 					{% endfor %}
 	      </div>
@@ -66,7 +62,6 @@
 	<table class="table">
 		<thead>
 			<tr>
-				<th scope="col">#</th>
 				<th scope="col">Evento</th>
 				<th scope="col">Status</th>
 			</tr>
@@ -74,7 +69,6 @@
 		<tbody>
 			{% for event in lista %}
 			<tr>
-				<th scope="row">1</th>
 				<td>{{ event.nome }}</td>
 				<td>{{ event.finalizado }}</td>
 			</tr>
