--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -89,7 +89,7 @@
                 <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 
                 <p>
-                  {{ request.user.first_name }}
+                  {{ request.user.first_name }} {{ request.user.last_name }}
                   <small>Membro desde {{ request.user.date_joined|date:"M/Y" }}</small>
                 </p>
               </li>
