--- a/templates/core/album.html
+++ b/templates/core/album.html
@@ -6,7 +6,7 @@
   {% for foto in fotos %}
     <div class="container">
     	<h2>{{ foto.galeria.evento.nome }}</h2>
-      <img src="{{ foto.imagem.url }}">
+      <img src="{{ foto.image.url }}">
     </div>
   {% endfor %}
 {% endblock %}
