--- a/templates/core/detalhe.html
+++ b/templates/core/detalhe.html
@@ -17,8 +17,6 @@
 	{% endif %}
 	<div class="album">
 		<h3>Album de Fotos</h3>
-		<a href="{% url 'core:eventos-album' object.pk %}">
-			<img src="#" alt="imagem padrao">
-		</a>
+		<a href="{% url 'core:eventos-album' object.pk %}">Album de imagens</a>
 	</div>
 {% endblock %}
