--- a/templates/pdf/certificado.html
+++ b/templates/pdf/certificado.html
@@ -10,6 +10,6 @@
   <body>
     <h5>{{ nome }}</h5>
     <hr>
-    <h5>{{ curso }} - {{ carga_h }}</h5>
+    <h5>{{ nome }}</h5>
   </body>
 </html>
