--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -122,47 +122,30 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">ADMIN</li>
         <li class="treeview">
-          <a href="{% url 'core:index' %}">
-            <i class="fa fa-dashboard"></i> <span>Home</span>
-          </a>
+          <li><a href="{% url 'core:index' %}"><i class="fa fa-home"></i> <span>Home</span></a></li>
+          <li><a href="{% url 'cadastro:dashboard' %}"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
           {% if not request.user.is_superuser %}
-          <a href="{% url 'cadastro:cadastro' %}">
-            <i class="fa fa-dashboard"></i> <span>Cadastro</span>
-          </a>
-        {% else %}
-          <a href="{% url 'cadastro:cadastro-evento' %}">
-            <i class="fa fa-dashboard"></i> <span>Cadastrar evento</span>
-          </a>
-          <a href="{% url 'cadastro:emitir' %}">
-            <i class="fa fa-dashboard"></i> <span>Autorizar emissão dos certificados</span>
-          </a>
-          <a href="{% url 'cadastro:publicar' %}">
-            <i class="fa fa-dashboard"></i> <span>Publicar fotos</span>
-          </a>
-          <a href="{% url 'cadastro:emitir' %}">
-            <i class="fa fa-dashboard"></i> <span>Publicar noticias</span>
-          </a>
-          <a href="{% url 'cadastro:atividade' %}">
-            <i class="fa fa-dashboard"></i> <span>Atividades</span>
-          </a>
-        {% endif %}
-          {% if user.is_authenticated %}
-            <a href="{% url 'cadastro:logout' %}">
-              <i class="fa fa-user"></i> <span>Logout</span>
-            </a>
-            {% if not request.user.is_superuser %}
-            <a href="{% url 'cadastro:inscricoes' %}">
-              <i class="fa fa-user"></i> <span>Minhas inscrições</span>
-            </a>
-
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-              Meus certificados
-            </button>
+            {% if user.is_authenticated %}
+            {% else %}
+              <li><a href="{% url 'cadastro:cadastro' %}"><i class="fa fa-user-circle"></i> <span>Cadastro</span></a></li>
             {% endif %}
           {% else %}
-            <a href="{% url 'cadastro:login' %}">
-              <i class="fa fa-user"></i> <span>Login</span>
-            </a>
+            <li><a href="{% url 'cadastro:cadastro-evento' %}"><i class="fa fa-book" aria-hidden="true"></i> <span>Cadastrar evento</span></a></li>
+            <li><a href="{% url 'cadastro:emitir' %}"><i class="fa fa-check" aria-hidden="true"></i> <span>Autorizar emissão dos certificados</span></a></li>
+            <li><a href="{% url 'cadastro:publicar' %}"><i class="fa fa-picture-o" aria-hidden="true"></i> <span>Publicar fotos</span></a></li>
+            <li><a href="{% url 'cadastro:noticias' %}">Publicar noticias</a></li>
+            <li><a href="{% url 'cadastro:atividade' %}">Atividades</a></li>
+          {% endif %}
+
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'cadastro:logout' %}"><i class="fa fa-user-times" aria-hidden="true"></i> <span>Logout</span></a></li>
+            {% if not request.user.is_superuser %}
+              <li><a href="{% url 'cadastro:inscricoes' %}">Minhas inscrições</a></li>
+
+              <li><a href="{% url 'cadastro:certificado' %}">Meus certificados</a></li>
+            {% endif %}
+          {% else %}
+            <li><a href="{% url 'cadastro:login' %}"><i class="fa fa-user"></i> <span>Login</span></a></li>
           {% endif %}
         </li>
         {% if request.user.is_staff %}
@@ -212,6 +195,7 @@
 <script src="{% static 'dist/js/adminlte.min.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'dist/js/demo.js' %}"></script>
+
 <script>
   $(document).ready(function () {
     $('.sidebar-menu').tree()
