--- a/templates/pdf/certificado.html
+++ b/templates/pdf/certificado.html
@@ -5,6 +5,11 @@
     <title>Certificado</title>
     <style type="text/css">
 
+      @media print {
+        @page {
+          size: 250mm 150mm;
+        }
+    }
     </style>
   </head>
   <body>
